--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <p>One service per month.</p>
             <p>Same day repairing.</p>
             <p>Time duration: 1 year </p>
-            <button class="btn btn-lg btn-block btn-outline-dark" type="button"><a class="plan-btn" href="mailto:homeo.india2019@gmail.com">Sing Up</a></button>
+            <button class="btn btn-lg btn-block btn-outline-dark" type="button"><a class="plan-btn" href="mailto:homeo.india2019@gmail.com">Sign Up</a></button>
           </div>
         </div>
 
@@ -190,7 +190,7 @@
             <p>One service per month</p>
             <p>Same day repairing.</p>
             <p>Time duration: 1 year</p>
-            <button class="btn btn-lg btn-block btn-outline-dark" type="button"><a class="plan-btn" href="mailto:homeo.india2019@gmail.com">Sing Up</a></button>
+            <button class="btn btn-lg btn-block btn-outline-dark" type="button"><a class="plan-btn" href="mailto:homeo.india2019@gmail.com">Sign Up</a></button>
           </div>
         </div>
 
@@ -206,7 +206,7 @@
             <p>Every day Housekeeping.</p>
             <p> Two times a day.</p>
             <p> For one month.</p>
-            <button class="btn btn-lg btn-block btn-outline-dark" type="button"><a class="plan-btn" href="mailto:homeo.india2019@gmail.com">Sing Up</a></button>
+            <button class="btn btn-lg btn-block btn-outline-dark" type="button"><a class="plan-btn" href="mailto:homeo.india2019@gmail.com">Sign Up</a></button>
           </div>
         </div>
       </div>
